test/libsolidity/syntaxTests/nameAndTypeResolution/547_warn_about_address_members_on_non_this_contract_balance.sol
contract C {
    function f() view public {
        C c;
        c.balance;
    }
}
// ----
// TypeError: (65-74): Member "balance" not found or not visible after argument-dependent lookup in contract C
